[tool.poetry]
name = "mmkhajah-dkt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
keras = "^3.0.0"
numpy = "^1.21.2"
scikit-learn = "^1.6.0"
torch = "2.2.2"
tensorflow = "2.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"